--- a/src/app/components/spends-feed/spends-feed.component.html
+++ b/src/app/components/spends-feed/spends-feed.component.html
@@ -186,7 +186,7 @@
 
   <div class="edit" id="edit">
     <div class="edit__close-arrow">
-      <i class="fas fa-arrow-circle-right" ></i>
+      <i class="fas fa-arrow-circle-right" (click)="closeEdit()" ></i>
       <h5>Spend edit</h5>
     </div>
     <div class="edit__form">
